@@ -47,6 +47,16 @@ public class Out implements Element {
             .addAttribute(Keys.COLOR);
 
     /**
+     * The polarity aware LED description
+     */
+    public static final ElementTypeDescription POLARITYAWARELEDDESCRIPTION
+            = new ElementTypeDescription("PolarityAwareLED",
+            attributes -> new Out(1, 1), input("A"), input("C"))
+            .addAttribute(Keys.ROTATE)
+            .addAttribute(Keys.LABEL)
+            .addAttribute(Keys.COLOR);
+
+    /**
      * The seven segment display description
      */
     public static final ElementTypeDescription SEVENDESCRIPTION = new SevenSegTypeDescription();
